# comp6400

./: README.md
homework0/: contour.c  gasket.c  gasket2.c  gasket3.c  tetra.c
homework1/: CMakeLists.txt
homework1/include/shelby/: shelby.h
homework1/python/: image_coord.py
homework1/src/: main.cc  shelby.cc
homework2/: CMakeLists.txt  Makefile  README.md
homework2/include/shelby/: drawing_tools.h  person.h
homework2/src/: drawing_tools.cc  main.cc  person.cc  shelby.cc
homework3/: CMakeLists.txt  Makefile
homework3/src/: main.cc
homework4/: CMakeLists.txt  Makefile  homework4.sln  homework4.sublime-project  homework4.sublime-workspace  homework4.vcxproj
homework4/models/: ground.mtl  shelby.blend  student.blend  student.mtl
homework4/src/: main.cc
homework5/: CMakeLists.txt  homework5.sln  homework5.sublime-project  homework5.sublime-workspace  homework5.vcxproj
homework5/models/: shelby.mtl  student.blend  student.mtl
homework5/src/: main.cc
homework6/: CMakeLists.txt  Makefile  homework6.sln  homework6.sublime-project  homework6.sublime-workspace  homework6.vcxproj
homework6/models/: ground.mtl  shelby.blend  shelby.blend1  shelby.blend2  shelby.mtl
homework6/src/: main.cc
